--- a/README.mkd
+++ b/README.mkd
@@ -3,44 +3,35 @@
 </p>
 
 
-# hyperledger-cn [![chatroom icon](https://patrolavia.github.io/telegram-badge/chat.png)](https://t.me/joinchat/G5DgZBxzSyZ2OEfHmHfCEw)
-
-Welcome here! 欢迎光临！
-
-这个社区是由往年参加过Hyperledger的学生组成的。我们乐于分享如何申请Hyperledger的暑期实习项目。
+Welcome here! 欢迎光临！我们乐于分享关于Hyperledger的暑期实习项目的相关信息
 
 参与Hyperledger暑期实习的好处：
 
 * 贡献工业级的开源项目
 * 提高技术（分布式账本/区块链等）
 * 受邀参加超级账本全球开发者大会
-* 奖金
+* [奖金](https://docs.linuxfoundation.org/lfx/mentorship/mentee-stipends/total-stipend-amount)
 
 
-## How to apply Hyperledger?
+## How to apply? 如何申请
 
 每年一月底二月初左右，超级账本会发动社区成员提出project proposal，鼓励社区的开发者提供项目。三月中旬的时候，会发佈入选项目的名单，随之申请开始。
 
 > 提早准备，申请比你想象的简单。
 
-我们的建议是当名单公佈的时候，大家就可以积极的参与到社区的开发之中。Hyperledger的时间规划请见[此处](https://wiki.hyperledger.org/display/INTERN#HyperledgerMentorshipProgram-2020ProgramTimeline*)。
+我们的建议是当名单公佈的时候，大家就可以积极的参与到社区的开发之中。
 
 ## Resources
 
-### Blog
+### Blog 相关博客
 
 - [2018 Internship](https://www.hyperledger.org/blog/2018/06/13/meet-the-hyperledger-summer-2018-interns-part-2)
 - [2019 Internship](https://www.hyperledger.org/blog/2019/12/12/2019-summer-mentee-project-update-hyperledger-fabric-sdk-for-node-js-security-extension)
+- [2021 Internship 开始接受申请](https://www.hyperledger.org/blog/2021/04/01/applications-open-for-expanded-paid-hyperledger-summer-mentorship-program)
 
-
-### Official Wiki
+### Official Wiki 原文维基
 
 - [How to apply](https://wiki.hyperledger.org/display/INTERN/How+to+Apply)
-- [2020 Projects](https://wiki.hyperledger.org/display/INTERN/2020+Projects)
-
-Past-posters are available at [misc](./misc)
-
-- [2018 fabric-sdk-py](misc/fabric-sdk-py-poster.pdf)
 
 ### How to contribute?
 
@@ -48,16 +39,7 @@ Past-posters are available at [misc](./misc)
 - Contribute your experience
 - and more!
 
-## Friendly Links
-
-Since Hyperledger Mentor Project is a part of a wider open source community, we are sharing links to other efforts to a better open-source world here:
-
-- [gsoc-cn](https://github.com/gsoc-cn/gsoc-cn)
-    - Google Summer of Code 中文相关资料
-- Wechat Official Accounts 公众号: codesummer
-    - a platform focus on Google Summer of Code and other international open source programs GSoC与其他开源项目的分享平台
-
-## Open Source License
+## [License](LICENSE)
 
 <p align="center">
   <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a>
@@ -66,3 +48,6 @@ Since Hyperledger Mentor Project is a part of a wider open source community, we 
 This work is licensed under a [Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License](http://creativecommons.org/licenses/by-nc-sa/3.0/).
 
 本作品采用[知识共享署名-非商业性使用-相同方式共享 3.0 未本地化版本许可协议](http://creativecommons.org/licenses/by-nc-sa/3.0/)进行许可。
+
+## Maintainers
+由往年参加过Hyperledger实习项目的学生，以及TWGC工作组共同维护。
